--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="build/VSS.SDK.min.js"></script>
 </head>
 <body>
+    <h1>Hello from index.html</h1>
     <script type="text/javascript">
         // Initialize framework 
         VSS.init({
