--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello from index.html</h1>
+    <div class="id-picker" style="width: 10em; border: solid .5px lightgray"></div>
     <script type="text/javascript">
         // Initialize framework 
         VSS.init({
