--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <button class="search-button">Search</button>
     </div>
-    <div class="results"></div>
+    <div id="results"></div>
     <script type="text/javascript">
         // Initialize framework 
         VSS.init({
