--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             /* inputs */
             .wrapper {
                 margin: 10px 20px;
+                overflow-y: scroll;
             }
             .input-controls > .status {
                 width: 10em;
