--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
             .input-controls > .status {
                 width: 10em;
             }
-            .input-controls .status-picker > .combo.input-text-box {
+            .input-controls .combo.input-text-box {
                 height: 26px;
             }
             .input-controls .creator-picker, .input-controls .reviewer-picker {
                 width: 15em;
+            }
+            .input-controls .title-box {
+                width: 20em;
             }
             .input-controls > div {
                 display: inline-block;
@@ -54,6 +57,10 @@
         <div>
             <label>Reviewer</label>
             <div class="reviewer-picker"></div>
+        </div>
+        <div>
+            <label>Title</label>
+            <div class="title-box"></div>
         </div>
     </div>
     <div id="results"></div>
