--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
             }
             .wrapper img {
                 width: 44px;
+                height: 44px;
             }
 
     </style>
 </head>
 <body class="wrapper">
+    <div id="header"></div>
     <div class="input-controls">
         <div>
             <label>Title</label>
