--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             .skinny-column {
                 padding: 0 20px;
             }
-            .wrapper img {
+            .wrapper #results img {
                 width: 44px;
                 height: 44px;
             }
