--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             .input-controls .combo.date-time {
                 width: 8em;
             }
-            .input-controls .creator-picker, .input-controls .reviewer-picker {
+            .input-controls .creator-picker, .input-controls .reviewer-picker, .input-controls .repo-picker {
                 width: 15em;
             }
             .input-controls .title-box {
@@ -84,6 +84,10 @@
         <div>
             <label>End Date</label>
             <div class="end-date-box"></div>
+        </div>
+        <div>
+            <label>Repo</label>
+            <div class="repo-picker"></div>
         </div>
     </div>
     <div id="results"></div>
