--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <button class="refresh cta" aria-label="Refresh">Refresh</button>
         </div>
     </div>
+    <div id="message"></div>
     <div id="results"></div>
     <script type="text/javascript">
         // Initialize framework 
