--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                 background-image: url(./img/refresh.png);
                 background-repeat: no-repeat;
                 background-position: 6px 6px;
+                padding-left: 25px !important;
             }
             .input-controls button {
-                padding-left: 16px;
-                padding-right: 16px;
                 margin-top: 14px;
             }
 
@@ -87,6 +86,9 @@
             #contents-results .cell.line-number {
                 padding-right: 5px;
                 background-color: lightgray;
+            }
+            #contents-results .cell.file-text {
+                white-space: pre;
             }
     </style>
 </head>
