--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             /* results */
             .pr-row > td {
                 margin: 0px 10px;
+                max-width: 40em;
+            }
+            .pr-row button.cta {
+                min-width: 8em;
             }
             .column-pad-right {
                 padding: 0 20px;
