--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <button class="refresh cta" aria-label="Refresh">Refresh</button>
             </div>
         </div>
-        <div id="message"></div>
+        <div id="message">Loading repository metadata...</div>
         <div id="results"></div>
     </div>
     <div id="pull-request-contents-search-container" hidden>
