--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         window.appInsights=appInsights;
         appInsights.trackPageView();
     </script>
-    <script src="build/VSS.SDK.min.js"></script>
+    <script src="build/VSS.SDK.js"></script>
     <style>
             /* inputs */
             .wrapper {
