--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@
             .input-controls .contents-search {
                 width: 30em;
             }
+            #message {
+                height: 1em;
+            }
             /* results */
             .pr-row > td {
                 margin: 0px 10px;
                 max-width: 40em;
             }
             .pr-row button.cta {
-                min-width: 8em;
+                min-width: 11em;
             }
             .column-pad-right {
                 padding: 0 20px;
