--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                 width: 44px;
                 height: 44px;
             }
+            .conflicts {
+                color: red;
+                border: 1px solid red;
+                display: inline-block;
+                text-align: center;
+                padding: 2px;
+                margin: 6px;
+            }
 
             /* Contents results*/
             .table {
